--- a/projects/boston_housing/boston_housing.ipynb
+++ b/projects/boston_housing/boston_housing.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -183,25 +183,25 @@
       "Maximum price: $1,024,800.00\n",
       "Mean price: $454,342.94\n",
       "Median price $438,900.00\n",
-      "Standard deviation of prices: $165,340.28\n"
+      "Standard deviation of prices: $165,171.13\n"
      ]
     }
    ],
    "source": [
     "# TODO: Minimum price of the data\n",
-    "minimum_price = data['MEDV'].min()\n",
+    "minimum_price = np.amin(data['MEDV'])\n",
     "\n",
     "# TODO: Maximum price of the data\n",
-    "maximum_price = data['MEDV'].max()\n",
+    "maximum_price = np.amax(data['MEDV'])\n",
     "\n",
     "# TODO: Mean price of the data\n",
-    "mean_price = data['MEDV'].mean()\n",
+    "mean_price = np.mean(data['MEDV'])\n",
     "\n",
     "# TODO: Median price of the data\n",
-    "median_price = data['MEDV'].median()\n",
+    "median_price = np.median(data['MEDV'])\n",
     "\n",
     "# TODO: Standard deviation of prices of the data\n",
-    "std_price = data['MEDV'].std()\n",
+    "std_price = np.std(data['MEDV'])\n",
     "\n",
     "# Show the calculated statistics\n",
     "print \"Statistics for Boston housing dataset:\\n\"\n",
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
        "MEDV     0.697209 -0.760670 -0.519034  1.000000"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,11 +333,11 @@
    "metadata": {},
    "source": [
     "* Would you expect a home that has an `'RM'` value(number of rooms) of 6 be worth more or less than a home that has an `'RM'` value of 7?\n",
-    "    - I would expect less price with 'RM' value of 6 than 7 due to positive correlation.\n",
+    "    - I would expect less price with 'RM' value of 6 than 7 due to positive correlation. Also, it is because more room cost more price in common sense.\n",
     "* Would you expect a neighborhood that has an `'LSTAT'` value(percent of lower class workers) of 15 have home prices be worth more or less than a neighborhood that has an `'LSTAT'` value of 20?\n",
-    "    - I would expect more price with 'LSTAT' value of 15 than 20 due to negative correlation.\n",
+    "    - I would expect more price with 'LSTAT' value of 15 than 20 due to negative correlation. Also, it is because it is high chance to stay in slum if there are a big number of lower class neighbors.\n",
     "* Would you expect a neighborhood that has an `'PTRATIO'` value(ratio of students to teachers) of 10 have home prices be worth more or less than a neighborhood that has an `'PTRATIO'` value of 15?\n",
-    "    - I would expect more price with 'PTRATIO' value of 10 than 15 due to negative correlation."
+    "    - I would expect more price with 'PTRATIO' value of 10 than 15 due to negative correlation. Also, it is because the less ratio is, the more concentrated education the inhabitants can get."
    ]
   },
   {
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -441,7 +441,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "\n",
+    "Yes, it is because R2 score is basically calculation of variance between prediction of y and actual value of y."
    ]
   },
   {
@@ -504,9 +506,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If the whole dataset is used for training, the model can only be adapted to training data and cause overfitting.\n",
-    "Because of this, certain part of data is used as test and evaluate if the model is overfitting or underfitting.\n",
-    "In case of underfitting, it can be identified with fairly low accuracy from the results of test data."
+    "If the whole dataset is used for training, the model can only be adapted to training data and cause overfitting.\n"
    ]
   },
   {
@@ -581,7 +581,7 @@
     "* What happens to the score of the training curve as more training points are added? What about the testing curve? \n",
     "    - training curve and testing curve converges to the score of 0.8. \n",
     "* Would having more training points benefit the model? \n",
-    "    - Nope. It only decreases the score of the model."
+    "    - Nope. It only decreases the score of the model. As test score converges, it is mostly stable. Hence putting more data only increases computing time to train the model."
    ]
   },
   {
@@ -632,9 +632,9 @@
     "**Answer: **\n",
     "\n",
     "* When the model is trained with a maximum depth of 1, does the model suffer from high bias or from high variance? \n",
-    "    - It suffers from high bias.\n",
+    "    - Since training score and validation score are low, the model is underfitting. Hence, it suffers from high bias.\n",
     "* How about when the model is trained with a maximum depth of 10? What visual cues in the graph justify your conclusions?\n",
-    "    - As the shaded region of complexity curves increase in size, the model with a maximum depth of 10 suffers from high variance."
+    "    - As validation score reaches maximum and decreases as maximum depth of the model increases, the model is overfitting to certain feature. Hence, it is suffering from high variance."
    ]
   },
   {
@@ -657,7 +657,7 @@
     "* Which maximum depth do you think results in a model that best generalizes to unseen data? \n",
     "    - Maximum depth of 4 will generalize best to unseen data. \n",
     "* What intuition lead you to this answer?\n",
-    "    - Because it has the smallest shaded region of complexity curves."
+    "    - Because it has the highest score of validation score and the score decreases if maximum depth is bigger than itself."
    ]
   },
   {
@@ -688,9 +688,10 @@
     "**Answer: **\n",
     "\n",
     "* What is the grid search technique?\n",
-    "    - Grid search technique is to automatically generate combinations of training parameters without declaring each of them.\n",
+    "    - Grid search technique is to automatically generate combinations of training parameters and train each of them without declaring one by one.\n",
     "* How it can be applied to optimize a learning algorithm?\n",
-    "    - Developers do not need to specify each parameter to train the model with this.\n"
+    "    - Developers do not need to specify each parameter to train the model with this, and Grid search gives accuracy of results of each parameter so that machine learning engineer can find the optimal training parameter.\n",
+    "    \n"
    ]
   },
   {
@@ -720,10 +721,11 @@
     "        - pick test set from divided data\n",
     "        - train with rest of them\n",
     "        - test with the test set\n",
-    "    Then, give average test results from all trainings.    \n",
+    "    \n",
+    "    Then, the model give average test results from all trainings in an amount of k.    \n",
     "    \n",
     "* What benefit does this technique provide for grid search when optimizing a model?\n",
-    "    - This validation method increases maximum accuracy with decreased minimum training/run time in return.\n"
+    "    - This validation method increases maximum accuracy, because it prevents overfitting to certain sets of train/test set. However, cross-validation method comes with decreased minimum training/run time in return.\n"
    ]
   },
   {
@@ -751,7 +753,9 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO: Import 'make_scorer', 'DecisionTreeRegressor', and 'GridSearchCV'\n",
@@ -890,15 +894,102 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RM              3.561\n",
+      "LSTAT           1.980\n",
+      "PTRATIO        12.600\n",
+      "MEDV       105000.000\n",
+      "dtype: float64 [ 446840.625]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RM</th>\n",
+       "      <th>LSTAT</th>\n",
+       "      <th>PTRATIO</th>\n",
+       "      <th>MEDV</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>7.853</td>\n",
+       "      <td>3.81</td>\n",
+       "      <td>14.7</td>\n",
+       "      <td>1018500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>225</th>\n",
+       "      <td>8.247</td>\n",
+       "      <td>3.95</td>\n",
+       "      <td>17.4</td>\n",
+       "      <td>1014300.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>253</th>\n",
+       "      <td>8.398</td>\n",
+       "      <td>5.91</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>1024800.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        RM  LSTAT  PTRATIO       MEDV\n",
+       "197  7.853   3.81     14.7  1018500.0\n",
+       "225  8.247   3.95     17.4  1014300.0\n",
+       "253  8.398   5.91     13.0  1024800.0"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions = reg.predict(client_data)\n",
+    "print data.min(),reg.predict([[3,1.9,12]])\n",
+    "data[data['MEDV'] >= 1000000]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "**Answer: **\n",
     "\n",
     "* What price would you recommend each client sell his/her home at? \n",
-    "    - Client 1: $300000 ~ $400000\n",
-    "      Client 2: $200000 ~ $300000\n",
-    "      Client 3: $1000000 ~ $1100000\n",
+    "    - Client 1: $400000 ~ 430000 compared with data with RM: 5.602, LSTAT: 16.20, PTRATIO: 17.9 MEDV: 407400\n",
+    "      Client 2: $200000 ~ $300000 compared with data with RM: 6.162, LSTAT: 24.10, PTRATIO: 20.2 MEDV: 279300\n",
+    "      Client 3: $1000000 ~ $1030000 compared with data with RM: 8.247, LSTAT: 3.95, PTRATIO: 17.4 MEDV: 1014300\n",
     "* Do these prices seem reasonable given the values for the respective features? \n",
     "    - Yes."
    ]
@@ -972,7 +1063,9 @@
     "- Would data collected in an urban city like Boston be applicable in a rural city?\n",
     "    - No. In that case, public transportation is not the matter(because it usually doesn't exist).\n",
     "- Is it fair to judge the price of an individual home based on the characteristics of the entire neighborhood?\n",
-    "    - If it is not the invasion of privacy, it is fair."
+    "    - If it is not the invasion of privacy, it is fair.\n",
+    "    \n",
+    "  In conclusion, I think the model cannot work on nowadays due to inflation and feature which violates personal privacy"
    ]
   },
   {
