--- a/projects/boston_housing/boston_housing.ipynb
+++ b/projects/boston_housing/boston_housing.ipynb
@@ -443,7 +443,10 @@
    "source": [
     "**Answer:**\n",
     "\n",
-    "Yes, it is because R2 score is basically calculation of variance between prediction of y and actual value of y."
+    "* Would you consider this model to have successfully captured the variation of the target variable? \n",
+    "   - Yes \n",
+    "* Why or why not?\n",
+    "   - It is because R2 score is basically calculation of variance between prediction of y and actual value of y."
    ]
   },
   {
