--- a/projects/smartcab/smartcab.ipynb
+++ b/projects/smartcab/smartcab.ipynb
@@ -520,20 +520,20 @@
     " Before answering question 3 and 4, here is the state dictionary.\n",
     " ```\n",
     " {\n",
-    "     ('green', None, 'right', 'forward', 'left'): {\n",
+    "     ('right', 'green', True, 'right'): {\n",
     "                                'forward' : 0.0,\n",
     "                                'None' : 0.0,\n",
     "                                'right' : 0.0,\n",
     "                                'left' : 0.0\n",
     "                           },\n",
-    "     ('green', 'left', None, 'left', 'right'): {\n",
+    "     ('left', 'green', False, 'right'): {\n",
     "                             'forward': 0.0,\n",
     "                             'None' : 0.0,\n",
     "                             'right': 0.0,\n",
     "                             'left': 0.0\n",
     "                         },\n",
     "     ...\n",
-    "     ('red', None, 'left', 'forward', 'forward'): { \n",
+    "     ('left', 'red', False, 'right'): { \n",
     "                         'forward': 0.0,\n",
     "                         'None': 0.0,\n",
     "                         'right': 0.0,\n",
@@ -542,27 +542,27 @@
     " }\n",
     " ```\n",
     "    3. \n",
-    "        ('red', 'left', 'forward', 'forward', 'forward')\n",
+    "        ('forward', 'green', True, None)\n",
     "        \n",
-    "         -- forward : -38.64\n",
+    "         -- forward : 2.18\n",
     "         \n",
-    "         -- None : 1.59\n",
+    "         -- None : -5.21\n",
     "         \n",
-    "         -- right : -14.64\n",
+    "         -- right : 1.02\n",
     "         \n",
-    "         -- left : -37.44\n",
+    "         -- left : 0.91\n",
     "\n",
-    "        **The policy(None) has the highest value and it is correct for the given state(None on red light).\n",
+    "        **The policy(right) has the highest value and it is correct for the given state(None on red light).\n",
     "    4.\n",
-    "        ('red', 'left', 'right', 'forward', 'right')\n",
+    "        ('right', 'red', False, None)\n",
     "        \n",
-    "         -- forward : -20.32\n",
+    "         -- forward : -10.64\n",
     "         \n",
-    "         -- None : 0.00\n",
+    "         -- None : 0.64\n",
     "         \n",
-    "         -- right : 2.40\n",
+    "         -- right : 1.92\n",
     "         \n",
-    "         -- left : 0.00\n",
+    "         -- left : -9.83\n",
     " \n",
     "         **The reward on right is higher than None.**\n",
     "    "
