--- a/projects/capstone/Data Analysis and Preprocessing.ipynb
+++ b/projects/capstone/Data Analysis and Preprocessing.ipynb
@@ -303,10 +303,6 @@
    "source": [
     "sns.set(style=\"white\")\n",
     "\n",
-    "# Generate a large random dataset\n",
-    "rs = np.random.RandomState(33)\n",
-    "d = pd.DataFrame(data=data,\n",
-    "                 columns=data.columns)\n",
     "\n",
     "# Compute the correlation matrix\n",
     "corr = data.corr()\n",
@@ -514,7 +510,9 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "processed_train_data.to_csv('processed_data/processed_train_data.csv')"
@@ -523,7 +521,9 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "processed_test_data.to_csv('processed_data/processed_test_data.csv')"
