--- a/projects/capstone/Train and Evaluate Models.ipynb
+++ b/projects/capstone/Train and Evaluate Models.ipynb
@@ -57,9 +57,9 @@
    "outputs": [],
    "source": [
     "X_train = train.drop('SeriousDlqin2yrs', axis=1)#train[[\"NumberOfTime30-59DaysPastDueNotWorse\", \"NumberOfTimes90DaysLate\", \"age\", \"NumberOfTime60-89DaysPastDueNotWorse\", \"NumberOfDependents\"]].as_matrix()\n",
-    "X_test = test.drop('SeriousDlqin2yrs', axis=1)#test[[\"NumberOfTime30-59DaysPastDueNotWorse\", \"NumberOfTimes90DaysLate\", \"age\", \"NumberOfTime60-89DaysPastDueNotWorse\", \"NumberOfDependents\"]].as_matrix()\n",
+    "X_valid = test.drop('SeriousDlqin2yrs', axis=1)#test[[\"NumberOfTime30-59DaysPastDueNotWorse\", \"NumberOfTimes90DaysLate\", \"age\", \"NumberOfTime60-89DaysPastDueNotWorse\", \"NumberOfDependents\"]].as_matrix()\n",
     "y_train = train[\"SeriousDlqin2yrs\"].as_matrix()\n",
-    "y_test = test[\"SeriousDlqin2yrs\"].as_matrix()"
+    "y_valid = test[\"SeriousDlqin2yrs\"].as_matrix()"
    ]
   },
   {
@@ -105,9 +105,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "def train_predict(learner, sample_size, X_train, y_train, X_test, y_test): \n",
     "    '''\n",
     "    inputs:\n",
@@ -226,7 +223,7 @@
     "    results[clf_name] = {}\n",
     "    for i, samples in enumerate([samples_1, samples_10, samples_100]):\n",
     "        results[clf_name][i] = \\\n",
-    "        train_predict(clf, samples, X_train, y_train, X_test, y_test)\n",
+    "        train_predict(clf, samples, X_train, y_train, X_valid, y_valid)\n",
     "\n",
     "# Run metrics visualization for the three supervised learning models chosen\n",
     "vs.evaluate(results, f1Score, aurocScore)"
